# NSU_PR_LABS

./: README.md
lab-begin/: .clang-format  CMakeLists.txt  todo.txt
lab-begin/src/: main.c
lab-begin/test/: testlab-begin
lab0/: CMakeLists.txt  todo.txt
lab0/src/: main.c
lab1-0/: CMakeLists.txt  todo.txt
lab1-0/src/: main.c
lab1-1/: CMakeLists.txt  todo.txt
lab1-1/src/: main.c
lab1-2/: CMakeLists.txt  todo.txt
lab1-2/src/: main.c
lab1-2/test/: testlab1-2
lab10/: CMakeLists.txt  todo.txt
lab10/src/: convex_hull.c  convex_hull.h  main.c  point.c  point.h
lab10/test/: testlab10
lab11/: CMakeLists.txt  todo.txt
lab11/src/: item.c  item.h  knapsack.c  knapsack.h  main.c
lab11/test/: testlab11
lab2/: CMakeLists.txt  todo.txt
lab2/src/: main.c
lab2/test/: in.txt
lab3-0/: CMakeLists.txt  todo.txt
lab3-0/src/: main.c
lab3-1/: CMakeLists.txt  todo.txt
lab3-1/src/: main.c
lab4/: CMakeLists.txt  todo.txt
lab4/src/: main.c
lab5/: CMakeLists.txt  todo.txt
lab5/src/: bit_stream.c  bit_stream.h  code.c  code.h  constants.h  huffman.c  (+6 more)
lab6-0/: CMakeLists.txt  todo.txt
lab6-1/: CMakeLists.txt  todo.txt
lab6-2/: CMakeLists.txt  todo.txt
lab7/: CMakeLists.txt
lab8-0/: CMakeLists.txt  todo.txt
lab8-0/src/: constants.h  graph.c  graph.h  kruskal_info.c  kruskal_info.h  main.c
lab8-1/: CMakeLists.txt  todo.txt
lab9/: CMakeLists.txt  todo.txt
modules/: common_lab.cmake  cpp_check.cmake  enable_sanitizers.cmake  enable_warnings.cmake  mingw-toolchain.cmake  test_runner.cmake  use_C99.cmake  valgrind.cmake  with_math.cmake
(+35 files in other folders)
